# python_util

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  coverage.xml  junit.xml  pyproject.toml
.github/workflows/: ci.yml  unit-test.yml
.kiro/specs/binary-string-codec/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/codecov-integration/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/logger-utility/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/progress-display/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/test-evidence-naming/: design.md  requirements.md  research.md  spec.json  (+1 more)
.kiro/steering/: mcp-tools.md  product.md  structure.md  tech.md
.serena/: project.yml
reports/: test-evidence.md
src/python_util/: _pyproject.py
tests/binary_string_codec/: test_bytes_codec.py  test_compression.py  test_compression_benchmark.py  test_envelope.py  test_exceptions.py  test_integration.py  test_object_codec.py  test_public_api.py
tests/logging/: test_config_loader.py  test_factory.py  test_fallback.py  test_handlers.py  test_integration.py  test_package_skeleton.py  test_types.py
tests/progress_display/: conftest.py  test_config_loader.py  test_display.py  test_exceptions.py  test_integration.py  test_public_api.py  test_readme_examples.py  test_types.py
tests/test_evidence/: test_conftest_hooks.py  test_exceptions.py  test_markdown_report.py  test_pre_commit_hook.py  test_public_api.py  test_report_writer.py  test_types.py
tests/time_utility/: test_clock.py  test_convert.py  test_exceptions.py  test_formatting.py  test_integration.py  test_package_skeleton.py  test_public_api.py  test_timezones.py
(+32 files in other folders)
